desktop-pwas: Redirect client-side and server-side redirectiosn to installed PWAs

Before, clicking a link to "http://calendar.google.com" would redirect to
"https://calendar.google.com" but the installed PWA for calendar would not open.
This is because the initial navigation's URL did not match the PWAs origin.

This patch makes it so that we also take redirects into consideration for
redirecting to installed PWAs. So clicking on "http://calendar.google.com",
which eventually redirects to "https://calendar.google.com", will open
the installed Calendar PWA.

Bug: 754082
Change-Id: I9c1cde548aa2810835bcc8564c66de9416db0607
Reviewed-on: https://chromium-review.googlesource.com/706742
Reviewed-by: Ben Wells <benwells@chromium.org>
Commit-Queue: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507834}
Former-commit-id: d49f0a8e0a476109cc6836ac13bb423b064a3933