chrome/browser/extensions/bookmark_app_navigation_throttle.h
@@ -31,6 +31,8 @@ class BookmarkAppNavigationThrottle : public content::NavigationThrottle {
 
   // content::NavigationThrottle:
   content::NavigationThrottle::ThrottleCheckResult WillStartRequest() override;
+  content::NavigationThrottle::ThrottleCheckResult WillRedirectRequest()
+      override;
   const char* GetNameForLogging() override;
 
  private:
